--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: #f7f7f2;
   margin: 0;
-  font: 14px/22px Montserrat, Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font: 16px/24px Montserrat, Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 header {
   position: fixed;
@@ -9,7 +9,8 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  background: #26aebc;
+  background: #004445;
+  border-bottom: 1px solid #ffffff1c;
 }
 .logo {
   padding: 10px 20px 0;
@@ -19,8 +20,8 @@ header {
   text-align: center;
 }
 .banner {
-  padding: 70px 0;
-  background: #51bec9;
+  padding: 80px 0;
+  background: #004445;
   color: #fff;
 }
 .container {
@@ -38,7 +39,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #333;
-  color: #fff;
+  background: #000;
+  color: #989da3;
   text-align: center;
 }
